# ioai

./: .gitignore
bank-curn/: pyproject.toml
bank-curn/bank_curn/: forsubmission.py  forsubmission_out.csv  main.ipynb  main.py  submission.csv
