[tool.poetry]
name = "bank-curn"
version = "0.1.0"
description = ""
authors = ["gorira <tatsuhiko.shigoto@gmail.com>"]
readme = "README.md"
packages = [{include = "bank_curn"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
polars = "^1.21.0"
torch = "^2.5.1"
scikit-learn = "1.5.2"
xgboost = "^2.1.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
pyarrow = "^19.0.0"
optuna = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
